--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=abd369ab2a00547a8ef2fb2ecd2170da
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://admin:Qwerty.73@127.0.0.1:3306/fbapp
+DATABASE_URL=mysql://newuser:Qwerty.73@127.0.0.1:3306/fbapp
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
