--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "almasaeed2010/adminlte": "~2.4",
         "facebook/graph-sdk": "^5.7",
         "knplabs/knp-paginator-bundle": "^4.0",
@@ -13,6 +14,7 @@
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/expression-language": "4.3.*",
+        "symfony/finder": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
@@ -29,8 +31,7 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*",
-      "ext-intl": "*"
+        "symfony/yaml": "4.3.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
