--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/expression-language": "4.3.*",
+        "symfony/filesystem": "4.3.*",
         "symfony/finder": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.3.*",
