--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "almasaeed2010/adminlte": "~2.4",
+        "doctrine/annotations": "^1.7",
         "facebook/graph-sdk": "^5.7",
         "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.3",
