--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,6 @@
 framework:
+    validation: { enabled: true }
+
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     #http_method_override: true
