--- a/.env
+++ b/.env
@@ -28,6 +28,6 @@ DATABASE_URL=mysql://newuser:Qwerty.73@127.0.0.1:3306/fbapp
 ###< doctrine/doctrine-bundle ###
 
 ##MAILER_CONFIGURATION
-MAILER_URL=gmail://apkafacebook20@gmail.com:kaktus.kaktus@localhost?encryption=tls&auth_mode=oauth
+MAILER_URL=gmail://apkafacebook20@gmail.com:kaktus.kaktus@localhost
 
 
