--- a/.env
+++ b/.env
@@ -27,9 +27,7 @@ APP_SECRET=abd369ab2a00547a8ef2fb2ecd2170da
 DATABASE_URL=mysql://newuser:Qwerty.73@127.0.0.1:3306/fbapp
 ###< doctrine/doctrine-bundle ###
 
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
+##MAILER_CONFIGURATION
+MAILER_URL=gmail://apkafacebook20@gmail.com:kaktus.kaktus@localhost?encryption=tls&auth_mode=oauth
+
+
