Mercure hub created

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/http-client": "4.3.*",
         "symfony/intl": "4.3.*",
+        "symfony/mercure": "^0.2.0",
+        "symfony/mercure-bundle": "^0.1.2",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "4.3.*",
