--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
+        "symfony/event-dispatcher": "4.3.*",
         "symfony/expression-language": "4.3.*",
         "symfony/filesystem": "4.3.*",
         "symfony/finder": "4.3.*",
