--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "facebook/graph-sdk": "^5.7",
         "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.3",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
