--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DATABASE_URL=mysql://newuser:Qwerty.73@127.0.0.1:3306/fbapp
 ###< doctrine/doctrine-bundle ###
 
 ##MAILER_CONFIGURATION
-MAILER_URL=gmail://apkafacebook20@gmail.com:kaktus.kaktus@localhost
+MAILER_URL=gmail://apkafacebook20@gmail.com:usjoyhslbztgvndy@localhost
 
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
