--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,16 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "ext-bcmath": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
         "almasaeed2010/adminlte": "~2.4",
         "doctrine/annotations": "^1.7",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "facebook/graph-sdk": "^5.7",
+        "google/cloud-speech": "^0.27.0",
+        "google/photos-library": "^1.4",
         "knplabs/knp-paginator-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/apache-pack": "^1.0",
@@ -24,6 +28,7 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/http-client": "4.3.*",
         "symfony/intl": "4.3.*",
+        "symfony/maker-bundle": "^1.11",
         "symfony/mercure": "^0.2.0",
         "symfony/mercure-bundle": "^0.1.2",
         "symfony/monolog-bundle": "^3.1",
@@ -37,9 +42,7 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*",
-        "symfony/maker-bundle": "^1.11",
-        "doctrine/doctrine-fixtures-bundle": "^3.2"
+        "symfony/yaml": "4.3.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
