--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     upload_directory: '%kernel.project_dir%/public/uploads/photos'
     upload_temp_directory: '%kernel.project_dir%/public/uploads'
+    secret_client_json: '%kernel.project_dir%/public/ClientSecret.json'
 
 services:
     # default configuration for services in *this* file
