Upload in cloudinary

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "almasaeed2010/adminlte": "~2.4",
+        "cloudinary/cloudinary_php": "^1.15",
         "doctrine/annotations": "^1.7",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "facebook/graph-sdk": "^5.7",
