--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ MAILER_URL=gmail://apkafacebook20@gmail.com:usjoyhslbztgvndy@localhost
 
 ###> symfony/mercure-bundle ###
 # See https://symfony.com/doc/current/mercure.html#configuration
-MERCURE_PUBLISH_URL=http://przemkeapp.herokuapp.com/hub
+MERCURE_PUBLISH_URL=http://localhost:8080/hub
 # The default token is signed with the secret key: !ChangeMe!
 MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOlsiKiJdfX0.NFCEbEEiI7zUxDU2Hj0YB71fQVT8YiQBGQWEyxWG0po
 ###< symfony/mercure-bundle ###
